--- a/index.html
+++ b/index.html
@@ -4,67 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,500,700" rel="stylesheet">
-    <title>Document</title>
+    <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    <title>Saumay Agrawal</title>
     <style>
         * {
             margin: 0;
-            border: 1px solid red;
-            /* font-family: Arial, Helvetica, sans-serif; */
+            /* border: 1px solid black; */
             box-sizing: border-box;
+            /* background-color: rgba(200, 200, 200, 0.3); */
         }
-        .container {
+        .center {
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+        .container {
             width: 100vw;
             height: 100vh;
-            padding: 5%;
+            background: url('./workdesk.jpg') no-repeat;
+            background-size: cover;
         }
-        .intro {
-            background-color: dodgerblue;
-            font-family: 'Roboto', Helvetica, sans-serif;
-            color: #fff;
-            font-size: 50px;
+        /* .dark {
+            background-color: rgba(0,0,0,0.5);
+            width: 100vw;
+            height: 100vh;
+        } */
+        .card {
+            position: relative;
+            top: 200px;
+            left: 100px;
+            width: 50vw;
+            height: 50vh;
+            display: flex;
+            flex-direction: column;
+            /* box-shadow: 0px 0px 8px 8px #fff inset; */
+            /* background-color: rgba(211, 210, 203, 0.9); */
+            border-radius: 3px;
         }
-        .aboutme {
-            background-color: greenyellow;
+        .name {
+            flex: 2;
+            color: rgba(26,26,26);
+            font-size: 80px;
+            font-weight: bolder;
+            font-family: 'Kaushan Script', cursive;
         }
-        .contact {
-            background-color: burlywood;
+        .links {
+            flex: 1;
+            display: flex;
         }
-        
+        .links a {
+            width: 100px;
+            height: 100px;
+            text-decoration: none;
+            color: #555;
+        }
+        .links a:hover {
+            color: rgba(26,26,26);
+        }
     </style>
 </head>
-
 <body>
-    <div class="container intro">
-        <div class="box">
-            <p>Hi! This is Saumay.</p>
-        </div>
-    </div>
-    <div class="container aboutme">
-        <div class="box">
-            <h2>About me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut odit assumenda beatae facilis tempora similique quam, aspernatur consequatur quasi ex aliquid voluptas rerum officia animi debitis numquam minus inventore voluptatum aperiam est nulla commodi sequi. Aliquam fugiat rerum exercitationem tempore.</p>
-        </div>
-    </div>
-    <div class="container contact">
-        <div class="box">
-            <h1>Reach out to me at</h1>
-            <div class="link-box">
-                <a href="#">Mail</a>
-            </div>
-            <div class="link-box">
-                <a href="#">LinkedIn</a>
-            </div>
-            <div class="link-box">
-                <a href="#">Github</a>
-            </div>
-            <div class="link-box">
-                <a href="#">Medium</a>
-            </div>   
-        </div>
+    <div class="container">
+        <!-- <div class="dark center"> -->
+                <div class="card">
+                    <div class="name center">
+                        <p>Saumay Agrawal</p>
+                    </div>
+                    <div class="links center">
+                        <a class="center" href="mailto:saumay.agrawal@gmail.com">
+                            <i class="fas fa-envelope fa-3x"></i>
+                        </a>
+                        <a class="center" href="https://www.linkedin.com/in/saumay-agrawal-7a633a139/">
+                            <i class="fab fa-linkedin fa-3x"></i>
+                        </a>
+                        <a class="center" href="https://github.com/Saumay-Agrawal">
+                            <i class="fab fa-github-square fa-3x"></i>
+                        </a>
+                        <a class="center" href="https://medium.com/@saumay.agrawal">
+                            <i class="fab fa-medium fa-3x"></i>
+                        </a>
+                    </div>
+                </div>
+        <!-- </div> -->
     </div>
 </body>
 </html>
