--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         .name {
             flex: 2;
             color: rgba(26,26,26);
-            font-size: 80px;
+            font-size: 500%;
             font-weight: bolder;
             font-family: 'Kaushan Script', cursive;
         }
