--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="links center">
                         <a class="center" href="mailto:saumay.agrawal@gmail.com">
-                            <i class="fas fa-envelope fa-3x"></i>
+                            <i class="fas fa-envelope-square fa-3x"></i>
                         </a>
                         <a class="center" href="https://www.linkedin.com/in/saumay-agrawal-7a633a139/">
                             <i class="fab fa-linkedin fa-3x"></i>
