--- a/index.html
+++ b/index.html
@@ -22,18 +22,13 @@
         .container {
             width: 100vw;
             height: 100vh;
-            background: url('./workdesk.jpg') no-repeat;
+            background: url('./workdesk-compressed.jpg') no-repeat;
             background-size: cover;
         }
-        /* .dark {
-            background-color: rgba(0,0,0,0.5);
-            width: 100vw;
-            height: 100vh;
-        } */
         .card {
             position: relative;
-            top: 200px;
-            left: 100px;
+            top: 20%;
+            left: 10%;
             width: 50vw;
             height: 50vh;
             display: flex;
@@ -45,6 +40,7 @@
         .name {
             flex: 2;
             color: rgba(26,26,26);
+            text-align: center;
             font-size: 500%;
             font-weight: bolder;
             font-family: 'Kaushan Script', cursive;
@@ -62,31 +58,48 @@
         .links a:hover {
             color: rgba(26,26,26);
         }
+        @media (max-width: 1024px) {
+            .container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .card {
+                top: 0;
+                left: 0;
+            }
+            .name {
+                font-size: 400%;
+            }
+        }
+        @media (max-width: 600px) {
+            .links a {
+                margin: 10px;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <!-- <div class="dark center"> -->
-                <div class="card">
-                    <div class="name center">
-                        <p>Saumay Agrawal</p>
-                    </div>
-                    <div class="links center">
-                        <a class="center" href="mailto:saumay.agrawal@gmail.com">
-                            <i class="fas fa-envelope-square fa-3x"></i>
-                        </a>
-                        <a class="center" href="https://www.linkedin.com/in/saumay-agrawal-7a633a139/">
-                            <i class="fab fa-linkedin fa-3x"></i>
-                        </a>
-                        <a class="center" href="https://github.com/Saumay-Agrawal">
-                            <i class="fab fa-github-square fa-3x"></i>
-                        </a>
-                        <a class="center" href="https://medium.com/@saumay.agrawal">
-                            <i class="fab fa-medium fa-3x"></i>
-                        </a>
-                    </div>
-                </div>
-        <!-- </div> -->
+        <div class="card">
+            <div class="name center">
+                <p>Saumay Agrawal</p>
+            </div>
+            <div class="links center">
+                <a class="center" href="mailto:saumay.agrawal@gmail.com">
+                    <i class="fas fa-envelope-square fa-3x"></i>
+                </a>
+                <a class="center" href="https://www.linkedin.com/in/saumay-agrawal-7a633a139/">
+                    <i class="fab fa-linkedin fa-3x"></i>
+                </a>
+                <a class="center" href="https://github.com/Saumay-Agrawal">
+                    <i class="fab fa-github-square fa-3x"></i>
+                </a>
+                <a class="center" href="https://medium.com/@saumay.agrawal">
+                    <i class="fab fa-medium fa-3x"></i>
+                </a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
