--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<p class="pt-8 text-sm"> Building in Web3/blockchain space at present. </p>
 
 			<div class="pt-12 pb-8">
-				<a class="link" href="mailto:saumay.agrawal@gmail.com" data-tippy-content="@email">
+				<a class="link" href="mailto:hi@saumay.com" data-tippy-content="@email">
 					<button class="bg-gray-700 hover:bg-gray-900 text-white font-bold py-2 px-4 rounded-full">
 						Get In Touch
 					</button>
